# libsubid

./: Cargo.toml  LICENSE
libsubid/: Cargo.toml
libsubid-dylib/: Cargo.toml
libsubid-dylib/src/: bindings.rs  extractor.rs  id_range.rs  id_type.rs  lib.rs  status_code.rs
libsubid/src/: error.rs  extractor.rs  id_range.rs  kind.rs  lib.rs  mock.rs  range.rs
libsubid/src/extractor/: dynamic.rs  mock.rs  noop.rs
