[package]
name = "libsubid-dylib"
description = "Shadow compatible nsswitch module for sub?id extraction from various sources."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
libsubid = { path = "../libsubid", version = "0.1.5" }
libc = "0.2"

[features]
mock-subuid = []
mock-subgid = []
dynamic-subuid = []
dynamic-subgid = []
