[package]
name = "libsubid-dylib"
description = "Shadow compatible nsswitch module for sub?id extraction from various sources."

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
libsubid = { path = "../libsubid", features = ["noop"] }
libc = "0.2"

[features]
subuid-mock = ["libsubid/mock"]
subuid-dynamic = ["libsubid/dynamic"]
subuid-dynamic-systemd = ["libsubid/dynamic"]
subgid-mock = ["libsubid/mock"]
subgid-dynamic = ["libsubid/dynamic"]
subgid-dynamic-systemd = ["libsubid/dynamic"]
